# RETFound_MAE

./: .gitignore  3.10_requirements.txt  Dockerfile  README.md  SampleSet.csv  engine_finetune.py  engine_pretrain.py  main_finetune.py  main_pretrain.py  models_mae.py  models_vit.py  pyproject.toml  pyproject_311.toml  pyproject_376.toml  requirements.txt
util/: csv_dataset.py  datasets.py  misc.py  pos_embed.py
